--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,14 +8,14 @@ on:
 
 defaults:
   run:
-    working-directory: ./PostCodes/PostCodesAPI
+    working-directory: ./PostCodesAPI
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
     env: 
-      working-directory: ./PostCodes/PostCodesAPI
+      working-directory: ./PostCodesAPI
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
 
@@ -32,5 +32,5 @@ jobs:
     - name: Build
       run: dotnet build --no-restore PostCodesAPI.csproj
     - name: Deploy to Lambda
-      working-directory: ./PostCodes/PostCodesAPI
+      working-directory: ./PostCodesAPI
       run: dotnet lambda deploy-serverless
