changes in API Pipeline

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,8 @@ name: Deploy PostCode App
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    paths:
+      - PostCodesAPI/**
 
 defaults:
   run:
