--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -24,10 +24,10 @@ jobs:
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
         name: PostCodesUI
-        template: PostCodesUI/aws_config/s3_static_website.yaml
+        template: ./PostCodesUI/aws_config/s3_static_website.yaml
 
     - uses: actions/checkout@v3
-    
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -50,4 +50,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
-        SOURCE_DIR: "PostCodesUI/build"
+        SOURCE_DIR: "./PostCodesUI/build"
