--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       working-directory: ./PostCodesUI
-
+      
     strategy:
       matrix:
         node-version: [16.x]
@@ -28,7 +28,7 @@ jobs:
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
         name: PostCodesUI
-        template: ./s3_static_website.yaml
+        template: ../PostCodesUI/aws_config/s3_static_website.yaml
 
     - uses: actions/checkout@v3
 
@@ -54,4 +54,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
-        SOURCE_DIR: "./PostCodesUI/build"
+        SOURCE_DIR: "../PostCodesUI/build"
