--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -24,11 +24,21 @@ jobs:
         node-version: [16.x]
 
     steps:
+    - name: Configure environment name
+      id: env-name
+      env:
+        REPO: ${{ github.repository }}
+      run: |
+        ENVIRONMENT=`echo $REPO | tr "/" "-"`
+        echo "Environment name: $ENVIRONMENT"
+        echo "::set-output name=environment::$ENVIRONMENT"
+
     - name: Deploy to AWS CloudFormation
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
         name: PostCodesUI
-        template: ../PostCodesUI/aws_config/s3_static_website.yaml
+        working-directory: ./PostCodesUI
+        template: ./PostCodesUI/aws_config/s3_static_website.yaml
 
     - uses: actions/checkout@v3
 
@@ -54,4 +64,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
-        SOURCE_DIR: "../PostCodesUI/build"
+        SOURCE_DIR: "./PostCodesUI/build"
