--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -38,7 +38,7 @@ jobs:
       with:
         name: PostCodesUI
         working-directory: ./PostCodesUI
-        template: ./PostCodesUI/aws_config/s3_static_website.yaml
+        template: ./aws_config/s3_static_website.yaml
 
     - uses: actions/checkout@v3
 
@@ -64,4 +64,4 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
-        SOURCE_DIR: "./PostCodesUI/build"
+        SOURCE_DIR: "./build"
