--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -31,6 +31,9 @@ jobs:
       with:
         name: PostCodesUI
         template: ./PostCodesUI/aws_config/s3_static_website.yaml
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
+        AWS_REGION: ${{ secrets.AWS_REGION }}
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
