--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -33,7 +33,7 @@ jobs:
         template: ./PostCodesUI/aws_config/s3_static_website.yaml
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_REGION: us-east-1
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
@@ -56,5 +56,5 @@ jobs:
         AWS_S3_BUCKET: ${{ secrets.AWS_STAGING_BUCKET_NAME }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
+        AWS_REGION: us-east-1
         SOURCE_DIR: "./build"
