--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -27,13 +27,22 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Deploy to AWS CloudFormation
-      uses: aws-actions/aws-cloudformation-github-deploy@v1
-      with:
-        name: PostCodesUI
-        template: ./PostCodesUI/aws_config/s3_static_website.yaml
+    - uses: mgenteluci/cloudformation-deploy-action@v1.4.1
+      env:
+        TEMPLATE: './PostCodesUI/aws_config/s3_static_website.yaml'
+        AWS_STACK_NAME: 'PostCodesUI'
+        AWS_REGION: 'us-east-1'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
-        AWS_REGION: us-east-1
+
+    # - name: Deploy to AWS CloudFormation
+    #   uses: aws-actions/aws-cloudformation-github-deploy@v1
+    #   with:
+    #     name: PostCodesUI
+    #     template: ./PostCodesUI/aws_config/s3_static_website.yaml
+    #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
+    #     AWS_REGION: us-east-1
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
