--- a/PostCodesUI/aws_config/s3_static_website.yaml
+++ b/PostCodesUI/aws_config/s3_static_website.yaml
@@ -5,6 +5,10 @@ Parameters:
   BucketName:
     Type: String
     Default: postcodeui.com
+  Region:
+        description: "AWS Region"
+        required: true
+        default: "us-east-1"
 Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
