--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -26,12 +26,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Run script file
-      run: |
-         chmod +x ./scripts/run.sh
-         ./scripts/run.sh
-      shell: bash
-
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -44,7 +38,7 @@ jobs:
     - name: Staging Build
       run: |
         yarn build
-        
+    
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
       with:
@@ -55,3 +49,13 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
         aws-region: us-east-1
         SOURCE_DIR: "./build"
+
+    - name: Deploy to AWS CloudFormation
+      uses: aws-actions/aws-cloudformation-github-deploy@v1
+      with:
+        name: PostCodesUI
+        template: ./PostCodesUI/aws_config/s3_static_website.yaml
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
+        aws-region: us-east-1
+        
