--- a/PostCodesUI/aws_config/s3_static_website.yaml
+++ b/PostCodesUI/aws_config/s3_static_website.yaml
@@ -6,9 +6,8 @@ Parameters:
     Type: String
     Default: postcodeui.com
   Region:
-        description: "AWS Region"
-        required: true
-        default: "us-east-1"
+    description: "AWS Region"
+    Default: "us-east-1"
 Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
