changes in template

--- a/PostCodesUI/aws_config/s3_static_website.yaml
+++ b/PostCodesUI/aws_config/s3_static_website.yaml
@@ -6,7 +6,7 @@ Parameters:
     Type: String
     Default: postcodeui.com
   Region:
-    description: "AWS Region"
+    Type: "String"
     Default: "us-east-1"
 Resources:
   S3Bucket:
