--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Deploy to AWS CloudFormation
       uses: aws-actions/aws-cloudformation-github-deploy@v1
       with:
-        name: PostCodesUI
+        name: PostCodeUI
         template: ./PostCodesUI/aws_config/s3_static_website.yaml
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
