CHANGES IN Pipeline

--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -3,11 +3,10 @@
 
 name: ReactJS PostCode UI App
 
-on: 
+on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    paths:
+      - PostCodesUI/**
 
 defaults:
   run:
