no-fail-on-empty-changeset: "1"

--- a/.github/workflows/react_js.yml
+++ b/.github/workflows/react_js.yml
@@ -40,6 +40,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_ID }}
         aws-region: us-east-1
+        no-fail-on-empty-changeset: "1"
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
